# reversible-debugger

./: .gitignore  .tmuxinator.yml  Dockerfile  Makefile  README.md  Value.hs  paper.md  report.md  reversible-debugger.cabal  send_receive.txt  stack.yaml  technical_report.md  threadWithWork.txt
app/: ElmTypes.hs  Main.hs  PPDP.hs  Server.hs
bachelor-presentation/: bachelor-presentation.tex
bachelor-thesis/: Makefile  State.hs  biblio.bib  macrosCR.tex  thesis.md
examples/: asynchAnd.txt  recursive_send.txt  spawn.txt  threeBuyer.txt
frontend/: elm-package.json
frontend/src/: Api.elm  Diagram.elm  Examples.elm  Main.elm  MappingTable.elm  SidePane.elm  ThreeBuyer.elm  Types.elm
frontend/tests/: Example.elm  elm-package.json
ppdp/: Makefile  revchor-PPDP.tex  tfp-presentation.tex
src/: Cmd.hs  DebuggerParser.hs  GlobalType.hs  HighLevel.hs  Interpreter.hs  LocalType.hs  MicroOz.hs  Monitor.hs  NestedDelegation.hs  NestedRecursion.hs  ParallelDelegation.hs  Parser.hs  Program.hs  Queue.hs  Recursive.hs  RecursiveChoice.hs  Repl.hs  ReversibleLanguage.hs  Semantics.hs  Session.hs  SessionType.hs  Synchronization.hs  ThreeBuyer.hs  TypeContext.hs  TypeState.hs  Types.hs  Utils.hs  Zipper.hs
src/Data/: Actor.hs  Context.hs  Direction.hs  Expr.hs  Identifier.hs  PID.hs  ReplState.hs  ReversibleLanguage.hs  Thread.hs  ThreadState.hs
src/Examples/: NestedDelegation.hs  NestedRecursion.hs  ParallelDelegation.hs  RecursiveChoice.hs  TFP.hs  ThreeBuyer.hs
src/MicroOz/: Parser.hs
src/Utils/: Maybe.hs  Result.hs
test/: Spec.hs
tfp-full-paper/: Makefile  biblio.bib  macrosCR.tex  responseToMichal2711.rtf  scratchpad.md  tfp-lncs.tex  thesis-old.tex  thesis.md  thesis.tex
tfp-postproceedings/: biblio.bib  main-pp.tex
tfp-submission/: Makefile  biblio.bib  extra-material.md  llncs.latex  mapping.md  mymain.tex  paper.bib  paper.md  session.bib
utrecht/: macrosCR.tex  utrecht-presentation.tex
