name:                reversible-debugger 
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/folkertdev/reversible-debugger#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Folkert de Vries 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Types, Parser, Interpreter
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , mtl
                     , HTTP
                     , network
                     , containers
                     , parsec
                     , free
                     , text
                     , async


  default-language:    Haskell2010

executable reversible-debugger 
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reversible-debugger 
                     , containers
                     , transformers
                     , mtl

  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-port
