name:                reversible-debugger 
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/folkertdev/reversible-debugger#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Folkert de Vries 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Interpreter
                     , Data.Expr
                     , Data.Thread
                     , Data.Context
                     , Data.ThreadState
                     , Data.ReplState
                     , Data.PID
                     , Cmd
                     , Repl
                     , MicroOz
                     , MicroOz.Parser
                     , DebuggerParser
                     , SessionType
                     , Queue
  other-modules:       Utils
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , elm-export
                     , mtl
                     , containers >= 0.5.9
                     , parsec
                     , text
                     , aeson



  default-language:    Haskell2010

executable reversible-debugger 
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base
                     , reversible-debugger 
                     , containers
                     , transformers
                     , mtl
                     , elm-export
                     , text

  default-language:    Haskell2010


-- executable elm-types 
--   hs-source-dirs:      app
--   main-is:             ElmTypes.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
--   build-depends:       base
--                      , reversible-debugger 
--                      , elm-export
--                      , containers
--                      , transformers
--                      , text
--                      , mtl
-- 
--   default-language:    Haskell2010

executable server 
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
  build-depends:       base
                     , reversible-debugger 
                     , elm-export
                     , containers
                     , transformers
                     , text
                     , mtl
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , wai-cors
                     , wai-extra

  default-language:    Haskell2010

test-suite reversible-debugger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reversible-debugger
                     , hspec 
                     , QuickCheck
                     , transformers
                     , parsec


source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-port
